--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,20 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+* {
+  box-sizing: border-box;
+}
+
+
+.gallery {
+  margin: 0 auto;
+  list-style: none;
+  width: 1024px;
+  gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+img {
+  width: 250px;
+  height: 250px;
+}
